--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,6 @@
-@import 'normalize.css';
+@use 'normalize-scss' as *;
+@use '@styles/variables' as *;
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -18,11 +20,9 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  // color: var(--foreground);
+  background: $background-color;
+  font-family: var(--font-tactic-sans), sans-serif;
 }
 
 * {
