--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // universal colors
 $color-white: #ffffff;
 $color-red: #ca0100;
-
+$color-light-grey: #f4f7f8;
 // main colors
 $primary-color: #010c13;
 $secondary-color: #a9a9a9;
@@ -9,6 +9,7 @@ $background-color: $color-white;
 $accent-color: $color-red;
 $border-color: $primary-color;
 $border-radius: 4px;
+$img-radius: 16px;
 
 // text
 $text-primary: $primary-color;
