--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -1,5 +1,32 @@
 @use '@styles/variables' as *;
 .header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 2rem 11.4%;
   height: 108px;
   background-color: $primary-color;
+
+  color: $color-white;
+  @media (max-width: 768px) {
+    padding: 9px 12px 15px;
+  }
+}
+.separator {
+  height: 68px;
+  width: 2px;
+  background-color: $color-white;
+  margin: 0 20px;
+}
+
+.image {
+  max-width: 154px;
+  width: 100%;
+  height: 42px;
+
+  object-fit: cover;
+  @media (max-width: 768px) {
+    height: 30px;
+    width: 111px;
+  }
 }
